DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Actual_Billed_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billed_Date__c</fullName>
    <label>Actual Billed Date</label>
    <type>Date</type>
</CustomField>