DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Actual_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sub_Total__c</fullName>
    <description>Amount will only show is the Sales Price has been modified and is less then the List Price.</description>
    <formula>If(  UnitPrice &lt; ListPrice , ListPrice *  Quantity ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Actuals Sub-Total taken from the List Price multiplied by the Qty when Sales Price is modified.</inlineHelpText>
    <label>Actual Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>