DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/AOP_Installation_OTC__c.field-meta.xml
<CustomField>
    <fullName>AOP_Installation_OTC__c</fullName>
    <description>IF( ISNULL( Opportunity.Estimated_Billed_Date__c ) ,0,

* CASE( MONTH(Opportunity.Estimated_Billed_Date__c ) , 
1,3, 
2,2, 
3,1, 
16-MONTH( Opportunity.Estimated_Billed_Date__c ))) ,0))</description>
    <formula>IF((ISPICKVAL( Charge_Type__c,&quot;Installation&quot;)  || ISPICKVAL( Charge_Type__c,&quot;OTC&quot;)), TotalPrice,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOP Installation/OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>