DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/AOP_MRC__c.field-meta.xml
<CustomField>
    <fullName>AOP_MRC__c</fullName>
    <description>#number of days left in the EBD month
( (IF( 
MONTH( Estimated_Bill_Date__c ) = 12,
DATE( YEAR( Estimated_Bill_Date__c ), 12, 31 ),
DATE( YEAR( Estimated_Bill_Date__c ), MONTH ( Estimated_Bill_Date__c ) + 1, 1 ) - 1
)- Estimated_Bill_Date__c)
/
#divided by number of days in the EBD month
DAY(DATE(YEAR(Estimated_Bill_Date__c ),(IF(MONTH(Estimated_Bill_Date__c )+1 &gt; 12, 1,
MONTH(Estimated_Bill_Date__c )+1)),1)-1) )

#multiplied by monthly charge
*
MRC__c

# added to the total monthly charge for the rest of the FY
+
IF( ISNULL( Estimated_Bill_Date__c ) ,0,IF(ISPICKVAL( Charge_Type__c,&quot;MRC&quot;), ( MRC__c * CASE(
MONTH(Estimated_Bill_Date__c ) ,
1,3,
2,2,
3,1,
16-MONTH( Estimated_Bill_Date__c ))) ,0))
#minus one month for the pro-rated value
-
MRC__c</description>
    <formula>( (IF(
MONTH( Estimated_Bill_Date__c ) = 12,
DATE( YEAR( Estimated_Bill_Date__c ), 12, 31 ),
DATE( YEAR( Estimated_Bill_Date__c ), MONTH ( Estimated_Bill_Date__c ) + 1, 1 ) - 1
)- Estimated_Bill_Date__c)
/
DAY(DATE(YEAR(Estimated_Bill_Date__c ),(IF(MONTH(Estimated_Bill_Date__c )+1 &gt; 12, 1,
MONTH(Estimated_Bill_Date__c )+1)),1)-1) )

*
MRC__c

+
IF( ISNULL( Estimated_Bill_Date__c ) ,0,IF(ISPICKVAL( Charge_Type__c,&quot;MRC&quot;), ( MRC__c * CASE(
MONTH(Estimated_Bill_Date__c ) ,
1,3,
2,2,
3,1,
16-MONTH( Estimated_Bill_Date__c ))) ,0))

-
MRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOP MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>