DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/AOP_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>AOP_Rental_or_Lease__c</fullName>
    <formula>IF( ISNULL( Opportunity.Estimated_Billed_Date__c ) ,0,IF(ISPICKVAL( Charge_Type__c,&quot;Rental or Lease&quot;), (TotalPrice * CASE( MONTH(Opportunity.Estimated_Billed_Date__c ) , 
1,3, 
2,2, 
3,1, 
16-MONTH( Opportunity.Estimated_Billed_Date__c ))) ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AOP Rental or Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>