DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Approval_Pending__c.field-meta.xml
<CustomField>
    <fullName>Approval_Pending__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approval Pending</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>