DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Discount</label>
    <type>Checkbox</type>
</CustomField>