DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/AveragePrice__c.field-meta.xml
<CustomField>
    <fullName>AveragePrice__c</fullName>
    <formula>( MRC__c  +  OTC__c )/ (if(MRC__c &gt;0,1,0) + if( OTC__c &gt;0,1,0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>