DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/BAN__c.field-meta.xml
<CustomField>
    <fullName>BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BAN</label>
    <referenceTo>BAN__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>