DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Booking_Type__c.field-meta.xml
<CustomField>
    <fullName>Booking_Type__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Impressions</fullName>
            </value>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>