DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Branch_Location__c.field-meta.xml
<CustomField>
    <fullName>Branch_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Location</label>
    <referenceTo>Branch_Location__c</referenceTo>
    <relationshipLabel>Opportunity Product (Branch Location)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>