DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Broker_Charges__c.field-meta.xml
<CustomField>
    <fullName>Broker_Charges__c</fullName>
    <label>Broker Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>