DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Bundle_PRD__c.field-meta.xml
<CustomField>
    <fullName>Bundle_PRD__c</fullName>
    <label>Bundle (PRD)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>