DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Category_AD_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_AD_Type__c</fullName>
    <label>Category/AD Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>High Impact</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Leaderboard</fullName>
            </value>
            <value>
                <fullName>Mobile Banner</fullName>
            </value>
            <value>
                <fullName>MPU</fullName>
            </value>
            <value>
                <fullName>Halfpage</fullName>
            </value>
            <value>
                <fullName>App Interstitial</fullName>
            </value>
            <value>
                <fullName>App Banner</fullName>
            </value>
            <value>
                <fullName>Pre-Roll Video</fullName>
            </value>
            <value>
                <fullName>Homepage Takeover</fullName>
            </value>
            <value>
                <fullName>Section Takeover</fullName>
            </value>
            <value>
                <fullName>Native Ad</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>