DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Category_Type__c</fullName>
    <formula>BLANKVALUE(Text(PricebookEntry.Product2.Category_Type__c), &quot;&quot;)</formula>
    <label>zDeprecated Category/Type</label>
    <type>Text</type>
</CustomField>