DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <inlineHelpText>MRC - Margin % field will default to 100%

Rental or Lease - Margin % field will default to 100%

OTC - Margin % field will default to 0%

Installation - Margin % field will default to 0%

PAYG - Margin % field will default to 0%</inlineHelpText>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>OTC</fullName>
            </value>
            <value>
                <fullName>NRR</fullName>
            </value>
            <value>
                <fullName>Rental or Lease</fullName>
            </value>
            <value>
                <fullName>PAYG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>