DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/ClosedServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>ClosedServiceRequest__c</fullName>
    <label># closed service request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>