DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Commission_Due__c.field-meta.xml
<CustomField>
    <fullName>Commission_Due__c</fullName>
    <formula>Rate_per_Activation__c * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>