DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Contract_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Period_Months__c</fullName>
    <label>Contract Period (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>