DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Contract_Value_Installation_OTC__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_Installation_OTC__c</fullName>
    <description>IF(ISPICKVAL(Opportunity.Contract_Term__c, &quot;&quot;),0,

* CASE(Opportunity.Contract_Term__c, 
&quot;*6 Month&quot;, 6, 
&quot;*18 Month&quot;, 18, 
&quot;1 Year&quot;,12, 
&quot;2 Years&quot;,24, 
&quot;3 Years&quot;,36, 
&quot;4 Years&quot;,48, 
&quot;5 Years&quot;,60, 
0)),0))</description>
    <formula>IF((ISPICKVAL( Charge_Type__c,&quot;Installation&quot;)   ||   ISPICKVAL( Charge_Type__c,&quot;OTC&quot;)), TotalPrice * Contract_Period_Months__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Value Installation/OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>