DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Contract_Value_New__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_New__c</fullName>
    <formula>IF( ISPICKVAL( Charge_Type__c , &quot;Handset Fund&quot;), 0 ,TotalPrice   *  Contract_Period_Months__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Value (New)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>