DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/CREATEDDATE_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>CREATEDDATE_MIGRATION__c</fullName>
    <label>CREATEDDATE_MIGRATION</label>
    <type>DateTime</type>
</CustomField>