DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/CUG__c.field-meta.xml
<CustomField>
    <fullName>CUG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CUG</label>
    <type>Checkbox</type>
</CustomField>