DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Digicel_Product_family__c.field-meta.xml
<CustomField>
    <fullName>Digicel_Product_family__c</fullName>
    <formula>TEXT( PricebookEntry.Product2.Product_Family2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digicel Product Family</label>
    <type>Text</type>
</CustomField>