DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Disconnected_Date__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Date__c</fullName>
    <description>Used for when a service is disconnected and to cease billing.</description>
    <label>Disconnected Date</label>
    <type>Date</type>
</CustomField>