DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Disconnection_SR_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Disconnection_SR_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disconnection SR Ticket</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OpportunityId</field>
            <operation>equals</operation>
            <valueField>Service_Request__c.Opportunity__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Service_Request__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Disconnection</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>