DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Discount_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Applied</label>
    <type>Checkbox</type>
</CustomField>