DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Request__c</fullName>
    <label>Discount Approval Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Discount Approval not Requested</fullName>
                <default>true</default>
                <label>Discount Approval not Requested</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>