DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Approval_Respons__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approval_Respons__c</fullName>
    <label>Discount Approval Response</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discount_Approval_Request__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>