DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Discount_Extended_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Discount_Extended_Selling_Price__c</fullName>
    <label>NOTUSED-Discount Extended Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>