DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Discounted_Extended_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Extended_Selling_Price__c</fullName>
    <formula>Extended_Selling_Price__c * (1- Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOTUSEDDiscounted Extended Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>