DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Discounted_Unit_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Unit_Selling_Price__c</fullName>
    <formula>Discounted_Extended_Selling_Price__c / Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOT IN USE-Discounted Unit Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>