DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Duty__c.field-meta.xml
<CustomField>
    <fullName>Duty__c</fullName>
    <label>Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>