DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Estimated_Bill_data_not_equal_to_Actual__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Bill_data_not_equal_to_Actual__c</fullName>
    <formula>Estimated_Bill_Date__c &lt;&gt;  Actual_Billed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Bill data not equal to Actual</label>
    <type>Checkbox</type>
</CustomField>