DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <formula>text(PricebookEntry.Product2.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>