DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Final_Margin__c.field-meta.xml
<CustomField>
    <fullName>Final_Margin__c</fullName>
    <formula>IF( Discount__c &gt;0, IF(Discount_Extended_Selling_Price__c&gt;0,Discount_Margin__c /  Discount_Extended_Selling_Price__c,0 ), Margin_markup_percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOT IN USE-Margin (Digicel) %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>