DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/FOB_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>FOB_Unit_Cost__c</fullName>
    <formula>Sales_Price__c  * (1- Supplier_Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FOB Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>