DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/FORMULA_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>FORMULA_Monthly_Fee__c</fullName>
    <formula>if(ISBLANK( Manual_Entry_Monthly_Fee__c),PricebookEntry.Product2.Monthly_Fee__c,Manual_Entry_Monthly_Fee__c )</formula>
    <label>Monthly Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>