DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Handling_Charge__c.field-meta.xml
<CustomField>
    <fullName>Handling_Charge__c</fullName>
    <label>Handling Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>