DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Handset_detail__c.field-meta.xml
<CustomField>
    <fullName>Handset_detail__c</fullName>
    <label>Handset detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>