DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/HIDDEN_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Opportunity_Owner__c</fullName>
    <formula>Opportunity.Owner.FirstName  &amp;  Opportunity.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>