DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Implementation_Case__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>Digicel PNG Implementation Case</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>