DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/InstallationLocation__c.field-meta.xml
<CustomField>
    <fullName>InstallationLocation__c</fullName>
    <description>DealHub</description>
    <label>Installation Location</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>