DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Isclosed__c.field-meta.xml
<CustomField>
    <fullName>Isclosed__c</fullName>
    <formula>Opportunity.IsClosed</formula>
    <label>Isclosed</label>
    <type>Checkbox</type>
</CustomField>