DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>