DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/LASTMODIFIEDBY_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBY_MIGRATION__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LASTMODIFIEDBY_MIGRATION</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Opportunity Product (LASTMODIFIEDBY_MIGRATION)</relationshipLabel>
    <relationshipName>Opportunity_Product1</relationshipName>
    <type>Lookup</type>
</CustomField>