DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/LASTMODIFIEDDATE_MIGRATION__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDDATE_MIGRATION__c</fullName>
    <label>LASTMODIFIEDDATE_MIGRATION</label>
    <type>DateTime</type>
</CustomField>