DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Manual_Entry_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry_Monthly_Fee__c</fullName>
    <description>This Monthly Fee will overwrite the Monthly Fee value defined against the product if populated</description>
    <label>Manual Entry Monthly Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>