DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Margin_Amount__c</fullName>
    <formula>ROUND(Extended_Selling_Price__c - Total_Landed_Cost__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOT IN USE-Margin (Mark Up) $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>