DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Margin_markup_percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_markup_percent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Margin%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>