DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/marked__c.field-meta.xml
<CustomField>
    <fullName>marked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>marked</label>
    <type>Checkbox</type>
</CustomField>