DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <formula>IF( OR(ISPICKVAL(Charge_Type__c, &apos;MRC&apos;), ISPICKVAL(Charge_Type__c,&apos;Rental or Lease&apos;)), TotalPrice -  ExistingMRCValue__c  , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>