DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Msisdn__c.field-meta.xml
<CustomField>
    <fullName>Msisdn__c</fullName>
    <description>Please enter the msisdn assigned to the respective plan/handset</description>
    <label>Msisdn</label>
    <length>11</length>
    <type>Text</type>
</CustomField>