DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_AOP_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_Total__c</fullName>
    <label>Net AOP Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>