DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Value__c</fullName>
    <formula>Contract_Value_New__c * Margin_markup_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>