DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_Contract_Value_Installation_OTC_Curr__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Value_Installation_OTC_Curr__c</fullName>
    <label>Net Contract Value Installation/OTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>