DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_Contract_Value_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Value_Rental_or_Lease__c</fullName>
    <formula>Contract_Value_Rental_or_Lease__c *  Margin_markup_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Contract Value Rental or Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>