DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_MTH_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Net_MTH_Rental_or_Lease__c</fullName>
    <formula>IF( ISPICKVAL( Charge_Type__c , &quot;Rental or Lease&quot;), TotalPrice * Margin_markup_percent__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net MTH Rental or Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>