DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_Value_AOP_Installation_OTC__c.field-meta.xml
<CustomField>
    <fullName>Net_Value_AOP_Installation_OTC__c</fullName>
    <formula>AOP_Installation_OTC__c *  Margin_markup_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Value AOP Installation/OTC F</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>