DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_Value_AOP_MRC_Currency__c.field-meta.xml
<CustomField>
    <fullName>Net_Value_AOP_MRC_Currency__c</fullName>
    <label>Net Value AOP MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>