DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Net_Value_AOP_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Net_Value_AOP_Rental_or_Lease__c</fullName>
    <formula>AOP_Rental_or_Lease__c * Margin_markup_percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Value AOP Rental or Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>