DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/NRR__c.field-meta.xml
<CustomField>
    <fullName>NRR__c</fullName>
    <formula>IF(ISPICKVAL(Charge_Type__c, &apos;NRR&apos;), TotalPrice , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>