DigicielFull/force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Order_Date__c</fullName>
    <description>This is required to create an audit trail as to when the opportunity is submitted to processing for corporate fulfillment.</description>
    <inlineHelpText>This is the date the order was submitted for processing</inlineHelpText>
    <label>Opportunity Order Date</label>
    <type>Date</type>
</CustomField>